# udp2kafka-cpp

./: Vagrantfile
provision/: install-clion.sh  provision.sh
udp2kafka/: .gitignore  CMakeLists.txt  main.cpp
udp2kafka/cmake/: FindLibRDKafka.cmake
